--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   display: flex;
@@ -65,23 +68,40 @@ body {
 }
 
 .wrapper {
-  margin-top: 100px;
   padding-top: 57.8px;
   background-image: url(../images/backgroundss.png);
   background-size: 100% 100%;
 }
 
 .nav {
+  background-color: white ;
   display: flex;
   align-items: end;
+  position: fixed;
+  color: pink;
+  width: 100%;
+  height: 90px;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 /* -------------------------------------------------------------------------------------------------------------------------- */
 
 .nav-items {
+  left: 0;
+  width: 100%;
+  z-index: 1000;
   display: flex;
+  position: fixed;
   align-items: center;
   justify-content: center;
+  background-color: white;
+  padding: 50px 0;
+}
+
+.header {
+  margin-top: 120px;
 }
 
 .item a {
@@ -278,6 +298,7 @@ body {
   }
 }
 
+
 .card-div {
   display: flex;
   align-self: center;
@@ -298,7 +319,7 @@ body {
   margin-bottom: 0;
 }
 
-.recent > h2 {
+.recent>h2 {
   text-align: center;
   height: 97px;
   width: 280px;
@@ -378,6 +399,7 @@ body {
 }
 
 .aboutme {
+  padding-top: 90px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -834,7 +856,7 @@ body {
   .intro {
     max-width: 100%;
     margin-bottom: 24px;
-    margin-top: 60px;
+    margin-top: 0;
     font-weight: 800;
     font-size: 40px;
     line-height: 60px;
